<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">コムリス</string>

    <!-- title label -->
    <string name="title_company_register">会社情報登録</string>
    <string name="title_company_edit">会社情報編集</string>
    <string name="title_company_job_evaluation">募集要項の評価</string>
    <string name="title_tags">タグ一覧</string>
    <string name="title_tags_view_reorder" tools:ignore="UnusedResources">タグ並べ替え</string>
    <string name="title_search" tools:ignore="UnusedResources">検索</string>
    <string name="title_company_get_from_remote" tools:ignore="UnusedResources">リモートリポジトリから取得</string>

    <!-- menu -->
    <string name="companies">会社一覧</string>
    <string name="categories">分類</string>
    <string name="tags">タグ</string>

    <!-- -->
    <string name="category_name_get_from_remote" tools:ignore="UnusedResources">リモートから取得</string>

    <!-- company list -->
    <string name="empty_company_list">何も登録されていません。分類を登録してから登録してください。</string>
    <string name="empty_tab_company_list">この分類には何も登録されていません。</string>
    <string name="description_company_reorder">会社情報の並び順を変更するためのイメージアイコンです。</string>

    <!-- company list and detail -->
    <string name="label_display_wanted_job">募集職種: </string>
    <string name="label_display_job_evaluation">募集要項の評価: </string>
    <string name="label_display_employees_num">従業員数: </string>
    <string name="label_display_salary">年収: </string>
    <string name="label_display_work_place">勤務地候補: </string>
    <string name="label_display_url">URL: </string>

    <!-- company detail -->
    <string name="label_display_doing_business">事業内容:</string>
    <string name="label_display_want_business">ビジョン:</string>
    <string name="label_register_date">登録日:</string>
    <string name="label_update_date">更新日:</string>
    <string name="description_company_detail_cover">分類毎のテーマカラーに対応した背景イメージを表示します。</string>
    <string name="description_company_detail_edit_overview">概要を編集します。</string>
    <string name="description_company_detail_edit_info">会社情報を編集します。</string>
    <string name="description_company_detail_edit_business">事業内容とビジョンを編集します。</string>
    <string name="description_company_detail_edit_job_evaluation">募集要項の評価を編集します。</string>
    <string name="description_company_detail_edit_detail">詳細を編集します。</string>

    <!-- fab menu -->
    <string name="label_fab_menu_trash">　　　削除</string>
    <string name="label_fab_menu_edit">編集モード</string>
    <string name="label_fab_menu_tag">タグを付与</string>

    <!-- search -->
    <string name="hint_search_text_field" tools:ignore="UnusedResources">検索</string>

    <!-- company register and detail -->
    <string name="label_company">会社名</string>
    <string name="label_category">分類</string>
    <string name="label_overview">概要</string>

    <string name="label_information">会社情報</string>
    <string name="label_employees_num">従業員数</string>
    <string name="label_salary">年収</string>
    <string name="label_wanted_job">募集職種</string>
    <string name="label_salary_unit">万円</string>
    <string name="label_salary_range_mark">〜</string>
    <string name="label_url">URL</string>
    <string name="label_work_place">勤務地候補</string>

    <string name="label_business">事業内容とビジョン</string>

    <string name="label_job_evaluation">募集要項の評価</string>

    <string name="label_description">詳細</string>
    <string name="label_etc">その他</string>
    <string name="label_employees_num_unit">名</string>
    <string name="label_job_evaluation_unit" tools:ignore="UnusedResources">点</string>

    <string name="label_empty_value" tools:ignore="UnusedResources">未登録</string>
    <string name="label_empty_date" tools:ignore="UnusedResources">ー</string>

    <!-- evaluation fragment -->
    <string name="title_correct_sentence">文章として正しい。</string>
    <string name="note_correct_sentence">そもそも記載内容が文章として成立しているか。</string>
    <string name="title_development_env">開発環境が書いてある。</string>
    <string name="note_development_env" tools:ignore="UnusedResources">言語、開発手法、人数など。適当に列挙されているのは怪しい。</string>
    <string name="title_want_skill">欲しいスキルに対して具体的な説明がされている。</string>
    <string name="note_want_skill">例えば単に「Web開発者」ではなく「ReactとRedux等のFluxアーキテクチャを用いた云々」などエンジニアでないと分からない程度の詳しさになっているか。</string>
    <string name="title_person_image">欲しい人物像と期待内容が明記されている。</string>
    <string name="note_person_image">募集したい人物像と期待していることが記載されているか？書いてあることがある意味すごすぎたり期待が高すぎるのは色々と怪しい可能性がある。</string>
    <string name="title_appeal">会社の魅力が十分に記載されている。</string>
    <string name="note_appeal">弊社のサービス開発を担当していただきます、では魅力がわからない。</string>
    <string name="title_job_offer_reason">求人を出した理由が記載されている。</string>
    <string name="note_job_offer_reason">サービスを大きくしたり事業拡大などが良い。離職率が高いイメージがなければ良い。</string>

    <!-- hint -->
    <string name="hint_company_name">会社名</string>
    <string name="hint_salary">任意</string>
    <string name="hint_wanted_job">募集職種(例:アプリエンジニア,Webエンジニア等)</string>
    <string name="hint_work_place">勤務地候補</string>
    <string name="hint_url">URL(例: https://www.sample.co.jp)</string>
    <string name="hint_doing_business">現在の事業内容</string>
    <string name="hint_want_business">今後やろうとしている事業内容</string>

    <!-- button -->
    <string name="add_button">登録</string>
    <string name="update_button">更新</string>

    <!-- error or warning message -->
    <string name="company_name_attention">この会社名は既に登録されているため登録できません。</string>
    <string name="company_name_empty_attention" tools:ignore="UnusedResources">会社名を入力してください。</string>
    <string name="employees_num_attention">従業員数は数字を入力してください。</string>
    <string name="salary_attention">年収は数字を入力してください。</string>

    <!-- category list -->
    <string name="empty_category_list">まだ何も登録されていません。好きな分類名を登録してください。この分類名が会社一覧のタブになります。</string>
    <string name="label_register_count">登録数:</string>
    <string name="description_category_reorder">分類の並び順を変更するためのイメージアイコンです。</string>

    <!-- tag list -->
    <string name="empty_tag_list">まだ何も登録されていません。好きなタグを登録してください。</string>
    <string name="label_tag_attach_count">添付数:</string>
    <string name="description_tag_reorder" tools:ignore="UnusedResources">タグの並び順を変更するためのイメージアイコンです。</string>
    <string name="tag_dialog_delete_attention" tools:ignore="UnusedResources">このタグは1つ以上添付されています。削除する場合はよくご確認ください。</string>

    <!-- category dialog -->
    <string name="category_dialog_label_name" tools:ignore="UnusedResources">分類名</string>
    <string name="category_dialog_attention" tools:ignore="UnusedResources">この分類名は既に登録されています</string>
    <string name="category_dialog_color_type" tools:ignore="UnusedResources">テーマカラー</string>
    <string name="category_dialog_delete_attention" tools:ignore="UnusedResources">登録数が1以上の場合は削除できません。</string>

    <!-- tag dialog -->
    <string name="tag_dialog_label_name" tools:ignore="UnusedResources">タグ名</string>
    <string name="tag_dialog_attention" tools:ignore="UnusedResources">このタグ名は既に登録されています</string>

    <!-- dialog common -->
    <string name="dialog_add_button" tools:ignore="UnusedResources">登録</string>
    <string name="dialog_update_button" tools:ignore="UnusedResources">更新</string>
    <string name="dialog_delete_button" tools:ignore="UnusedResources">削除</string>

    <!-- company detail dialog -->
    <string name="detail_dialog_trash_button_message" tools:ignore="UnusedResources">削除します。よろしいですか？（削除したら元に戻せません。）</string>
    <string name="dialog_ok" tools:ignore="UnusedResources">OK</string>
    <string name="dialog_cancel" tools:ignore="UnusedResources">Cancel</string>

    <!-- error message -->
    <string name="load_failure_companies" tools:ignore="UnusedResources">会社一覧の読み込みに失敗しました。</string>
    <string name="load_failure_company" tools:ignore="UnusedResources">会社情報の読み込みに失敗しました。</string>
    <string name="load_failure_categories" tools:ignore="UnusedResources">分類の読み込みに失敗しました。</string>
    <string name="load_failure_tags" tools:ignore="UnusedResources">タグの読み込みに失敗しました。</string>
    <string name="load_failure_search" tools:ignore="UnusedResources">検索の実行に失敗しました。</string>

    <!-- remote access message -->
    <string name="remote_access_message_success" tools:ignore="UnusedResources">リモートから新しい会社情報を取得しました。</string>
    <string name="remote_access_message_no_new_data" tools:ignore="UnusedResources">新しい会社情報はありません。</string>
    <string name="remote_access_message_error" tools:ignore="UnusedResources">通信エラー</string>

    <string name="open" tools:ignore="UnusedResources">open</string>
    <string name="close" tools:ignore="UnusedResources">close</string>

    <string name="action_settings" tools:ignore="UnusedResources">Settings</string>

</resources>
