<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.CompanyRegisterFragment">

    <data>
        <variable name="viewModel" type="jp.hotdrop.compl.viewmodel.CompanyRegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/label_name"
                        style="@style/ItemLabel"
                        android:layout_marginTop="@dimen/spacing"
                        android:layout_marginStart="@dimen/spacing"
                        android:text="@string/label_company" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/txt_name"
                        style="@style/EditText"
                        android:layout_below="@id/label_name"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:layout_marginStart="@dimen/spacing"
                        android:layout_marginEnd="@dimen/spacing"
                        android:text="@={viewModel.viewName}" />

                    <TextView
                        android:id="@+id/label_category"
                        style="@style/ItemLabel"
                        android:layout_marginTop="@dimen/spacing"
                        android:layout_marginStart="@dimen/spacing"
                        android:layout_below="@id/txt_name"
                        android:text="@string/label_category" />

                    <Spinner
                        android:id="@+id/spinner_category"
                        style="@style/CategorySpinner"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:layout_marginStart="@dimen/spacing"
                        android:layout_marginEnd="@dimen/spacing"
                        android:layout_below="@id/label_category" />

                    <TextView
                        android:id="@+id/label_overview"
                        style="@style/ItemLabel"
                        android:layout_marginTop="@dimen/spacing"
                        android:layout_marginStart="@dimen/spacing"
                        android:layout_below="@id/spinner_category"
                        android:text="@string/label_overview" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/txt_overview"
                        style="@style/MultiLineEditText"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:layout_marginStart="@dimen/spacing"
                        android:layout_marginEnd="@dimen/spacing"
                        android:layout_below="@id/label_overview"
                        android:text="@={viewModel.viewOverview}" />

                    <TextView
                        android:id="@+id/label_employees_num"
                        style="@style/ItemLabel"
                        android:layout_marginTop="@dimen/spacing"
                        android:layout_marginStart="@dimen/spacing"
                        android:layout_below="@id/txt_overview"
                        android:text="@string/label_employees_num" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/txt_employees_num"
                        style="@style/CompactEditText"
                        android:layout_marginTop="@dimen/spacing"
                        android:layout_marginStart="@dimen/spacing"
                        android:layout_marginEnd="@dimen/spacing"
                        android:layout_below="@id/label_employees_num"
                        android:text="@={viewModel.viewEmployeesNum}" />

                    <TextView
                        android:id="@+id/label_salary"
                        style="@style/ItemLabel"
                        android:layout_marginTop="@dimen/spacing"
                        android:layout_marginStart="@dimen/spacing"
                        android:layout_below="@id/txt_employees_num"
                        android:text="@string/label_salary" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/txt_salary_lower"
                        style="@style/CompactEditText"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:layout_marginStart="@dimen/spacing"
                        android:layout_below="@id/label_salary"
                        android:text="@={viewModel.viewSalaryLow}" />

                    <TextView
                        android:id="@+id/label_salary_lower_unit"
                        style="@style/ItemUnitLabel"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:layout_toEndOf="@id/txt_salary_lower"
                        android:layout_below="@id/label_salary"
                        android:layout_alignBottom="@id/txt_salary_lower"
                        android:text="@string/label_salary_unit" />

                    <TextView
                        android:id="@+id/label_salary_range_mark"
                        style="@style/ItemUnitLabel"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:layout_toEndOf="@id/label_salary_lower_unit"
                        android:layout_below="@id/label_salary"
                        android:layout_alignBottom="@id/txt_salary_lower"
                        android:text="@string/label_salary_range_mark" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/txt_salary_high"
                        style="@style/CompactEditText"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:layout_below="@id/label_salary"
                        android:layout_toEndOf="@id/label_salary_range_mark"
                        android:hint="@string/hint_salary"
                        android:text="@={viewModel.viewSalaryHigh}" />

                    <TextView
                        android:id="@+id/label_salary_high_unit"
                        style="@style/ItemUnitLabel"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:layout_toEndOf="@id/txt_salary_high"
                        android:layout_below="@id/label_salary"
                        android:layout_alignBottom="@id/txt_salary_lower"
                        android:text="@string/label_salary_unit" />

                    <TextView
                        android:id="@+id/label_wanted_job"
                        style="@style/ItemLabel"
                        android:layout_marginTop="@dimen/spacing"
                        android:layout_marginStart="@dimen/spacing"
                        android:layout_marginEnd="@dimen/spacing"
                        android:layout_below="@id/txt_salary_lower"
                        android:text="@string/label_wanted_job" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/txt_wanted_job"
                        style="@style/EditText"
                        android:layout_below="@id/label_wanted_job"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:layout_marginStart="@dimen/spacing"
                        android:layout_marginEnd="@dimen/spacing"
                        android:hint="@string/hint_wanted_job"
                        android:text="@={viewModel.viewWantedJob}" />

                    <TextView
                        android:id="@+id/label_url"
                        style="@style/ItemLabel"
                        android:layout_marginTop="@dimen/spacing"
                        android:layout_marginStart="@dimen/spacing"
                        android:layout_marginEnd="@dimen/spacing"
                        android:layout_below="@id/txt_wanted_job"
                        android:text="@string/label_url" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/txt_url"
                        style="@style/EditText"
                        android:layout_below="@id/label_url"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:layout_marginStart="@dimen/spacing"
                        android:layout_marginEnd="@dimen/spacing"
                        android:hint="@string/hint_url"
                        android:text="@={viewModel.viewUrl}" />

                    <TextView
                        android:id="@+id/label_note"
                        style="@style/ItemLabel"
                        android:layout_marginTop="@dimen/spacing"
                        android:layout_marginStart="@dimen/spacing"
                        android:layout_marginEnd="@dimen/spacing"
                        android:layout_below="@id/txt_url"
                        android:text="@string/label_description" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/txt_note"
                        style="@style/MultiLineEditText"
                        android:layout_marginStart="@dimen/spacing"
                        android:layout_marginEnd="@dimen/spacing"
                        android:layout_below="@id/label_note"
                        android:text="@={viewModel.viewNote}" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" >

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/register_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:layout_marginBottom="@dimen/spacing_small"
                        android:theme="@style/OkButton"
                        android:text="@string/add_button" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</layout>
