<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="800dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_category_name"
            style="@style/ItemLabel"
            android:text="@string/category_dialog_label_name" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/text_category_name"
            android:layout_width="200dp"
            style="@style/EditText"
            android:text="" />

    </LinearLayout>

    <TextView
        android:id="@+id/label_category_attention"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:textColor="@color/attention"
        android:textSize="@dimen/text_small"
        android:text="@string/category_dialog_attention"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_color_type"
            style="@style/ItemLabel"
            android:text="@string/category_dialog_color_type" />

        <Spinner
            android:id="@+id/spinner_color_type"
            style="@style/ColorSpinner" />

    </LinearLayout>

</LinearLayout>