<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="800dp">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/label_category_name"
            style="@style/ItemLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_dialog_label_name" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/text_category_name"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_category_name" />

        <TextView
            android:id="@+id/label_category_attention"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_below="@id/text_category_name"
            android:textColor="@color/attention"
            android:textSize="@dimen/text_small"
            android:text="@string/category_dialog_attention"
            android:visibility="gone" />

        <TextView
            android:id="@+id/label_color_type"
            style="@style/ItemLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_category_attention"
            android:text="@string/category_dialog_color_type" />

        <Spinner
            android:id="@+id/spinner_color_type"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_height"
            style="@style/Spinner"
            android:layout_below="@id/label_color_type" />

        <TextView
            android:id="@+id/label_category_delete_attention"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/spacing"
            android:layout_marginStart="@dimen/spacing"
            android:layout_below="@id/spinner_color_type"
            android:textColor="@color/attention"
            android:textSize="@dimen/text_small"
            android:text="@string/category_dialog_delete_attention"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>